[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/search/search_panel.gd" id="1"]

[node name="SearchPanel" type="PanelContainer"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Header" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 4

[node name="SearchInput" type="LineEdit" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Search messages..."

[node name="CloseButton" type="Button" parent="VBox/Header"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
text = "X"
flat = true

[node name="StatusLabel" type="Label" parent="VBox"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ResultsVBox" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="LoadMoreButton" type="Button" parent="VBox"]
visible = false
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 4
text = "Load More"
